--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,76 +1,75 @@
 ---
 import SocialList from "@/components/SocialList.astro";
-import CVLink from "@/components/CVLink.astro";
-import PostPreview from "@/components/blog/PostPreview.astro";
-import { getAllPosts, sortMDByDate } from "@/data/post";
+// import PostPreview from "@/components/blog/PostPreview.astro";
+// import { getAllPosts, sortMDByDate } from "@/data/post";
 import PageLayout from "@/layouts/Base.astro";
 
-const MAX_POSTS = 10;
-const allPosts = await getAllPosts();
-const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
+// const MAX_POSTS = 10;
+// const allPosts = await getAllPosts();
+// const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
 
-const cactusTech: { desc: string; href: string; title: string }[] = [
-	{
-		desc: "Deep learning framework for implementing ML models",
-		href: "https://tensorflow.org",
-		title: "TensorFlow",
-	},
-	{
-		desc: "Scientific computing and data manipulation in Python",
-		href: "https://numpy.org",
-		title: "NumPy",
-	},
-	{
-		desc: "Data analysis and manipulation library",
-		href: "https://pandas.pydata.org",
-		title: "Pandas",
-	},
-	{
-		desc: "Machine learning library for predictive data analysis",
-		href: "https://scikit-learn.org",
-		title: "Scikit-learn",
-	},
-	{
-		desc: "Containerization platform for application deployment",
-		href: "https://docker.com",
-		title: "Docker",
-	},
-	{
-		desc: "SQL toolkit and ORM for database management",
-		href: "https://prisma.io",
-		title: "Prisma",
-	},
-	{
-		desc: "Next-gen static typing for JavaScript",
-		href: "https://typescriptlang.org",
-		title: "TypeScript",
-	},
-	{
-		desc: "Computer vision and image processing library",
-		href: "https://opencv.org",
-		title: "OpenCV",
-	},
-	{
-		desc: "MLOps platform for machine learning lifecycle",
-		href: "https://mlflow.org",
-		title: "MLflow",
-	},
-	{
-		desc: "Open-source automation server for CI/CD",
-		href: "https://jenkins.io",
-		title: "Jenkins",
-	},
-	{
-		desc: "Building dynamic user interfaces and modern web applications",
-		href: "https://react.dev",
-		title: "React.js",
-	},
-	{
-		desc: "Server-side JavaScript runtime for scalable backend solutions",
-		href: "https://nodejs.org",
-		title: "Node.js",
-	},
-];
+// const cactusTech: { desc: string; href: string; title: string }[] = [
+// 	{
+// 		desc: "Deep learning framework for implementing ML models",
+// 		href: "https://tensorflow.org",
+// 		title: "TensorFlow",
+// 	},
+// 	{
+// 		desc: "Scientific computing and data manipulation in Python",
+// 		href: "https://numpy.org",
+// 		title: "NumPy",
+// 	},
+// 	{
+// 		desc: "Data analysis and manipulation library",
+// 		href: "https://pandas.pydata.org",
+// 		title: "Pandas",
+// 	},
+// 	{
+// 		desc: "Machine learning library for predictive data analysis",
+// 		href: "https://scikit-learn.org",
+// 		title: "Scikit-learn",
+// 	},
+// 	{
+// 		desc: "Containerization platform for application deployment",
+// 		href: "https://docker.com",
+// 		title: "Docker",
+// 	},
+// 	{
+// 		desc: "SQL toolkit and ORM for database management",
+// 		href: "https://prisma.io",
+// 		title: "Prisma",
+// 	},
+// 	{
+// 		desc: "Next-gen static typing for JavaScript",
+// 		href: "https://typescriptlang.org",
+// 		title: "TypeScript",
+// 	},
+// 	{
+// 		desc: "Computer vision and image processing library",
+// 		href: "https://opencv.org",
+// 		title: "OpenCV",
+// 	},
+// 	{
+// 		desc: "MLOps platform for machine learning lifecycle",
+// 		href: "https://mlflow.org",
+// 		title: "MLflow",
+// 	},
+// 	{
+// 		desc: "Open-source automation server for CI/CD",
+// 		href: "https://jenkins.io",
+// 		title: "Jenkins",
+// 	},
+// 	{
+// 		desc: "Building dynamic user interfaces and modern web applications",
+// 		href: "https://react.dev",
+// 		title: "React.js",
+// 	},
+// 	{
+// 		desc: "Server-side JavaScript runtime for scalable backend solutions",
+// 		href: "https://nodejs.org",
+// 		title: "Node.js",
+// 	},
+// ];
 
 // const cactusProjects: {
 // 	description: string;
@@ -98,9 +97,8 @@ const cactusTech: { desc: string; href: string; title: string }[] = [
 			about building intelligent systems, and driving impact one line of code at a time.
 		</p>
 		<SocialList />
-		<CVLink />
 	</section>
-	<section aria-label="Blog post list" class="mt-16">
+	<!-- <section aria-label="Blog post list" class="mt-16">
 		<h2 class="title mb-4 text-xl">Posts</h2>
 		<ul class="space-y-4">
 			{
@@ -112,8 +110,8 @@ const cactusTech: { desc: string; href: string; title: string }[] = [
 				))
 			}
 		</ul>
-	</section>
-	<section class="mt-16">
+	</section> -->
+	<!-- <section class="mt-16">
 		<h2 class="title mb-4 text-xl">Technologies</h2>
 		<dl class="space-y-4">
 			{
@@ -131,9 +129,9 @@ const cactusTech: { desc: string; href: string; title: string }[] = [
 				))
 			}
 		</dl>
-	</section>
+	</section> -->
 
-	<section class="mb-8 mt-16">
+	<!-- <section class="mb-8 mt-16">
 		<h2 class="title mb-12 text-xl">Projects</h2>
-	</section>
+	</section> -->
 </PageLayout>
