--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,25 +3,53 @@
 @tailwind utilities;
 
 @layer base {
+
 	:root,
 	:root[data-theme="light"] {
 		color-scheme: light;
 		/* https://tailwindcss.com/docs/customizing-colors#using-css-variables */
 		--theme-bg: 0deg 0% 98%;
-		--theme-link: 172deg 18% 41%;
+		/* Light background */
+		--theme-link: 351deg 66% 48%;
+		/* Light link color */
 		--theme-text: 203deg 11% 15%;
+		/* Light text color */
 		--theme-accent: 351deg 66% 48%;
+		/* Light accent color */
 		--theme-accent-2: 0deg 0% 7%;
+		/* Light secondary color */
 		--theme-quote: 351deg 66% 48%;
+		/* Light quote color */
+
+		/* Penrose triangle and ball colors */
+		--triangle-color: 351deg 66% 48%;
+		--ball-color: 203deg 11% 15%;
+
 	}
 
 	:root[data-theme="dark"] {
 		color-scheme: dark;
-		--theme-bg: 210deg 6% 12%;
-		--theme-link: 330deg 49% 67%;
-		--theme-text: 220deg 3% 79%;
-		--theme-accent: 159deg 64% 45%;
-		--theme-accent-2: 0deg 0% 93%;
-		--theme-quote: 102deg 100% 86%;
+		/* https://tailwindcss.com/docs/customizing-colors#using-css-variables */
+		--theme-bg: 240deg 100% 3%;
+		/* Dark background */
+		--theme-link: 174deg 81% 46%;
+		/* Dark link color*/
+		--theme-text: 0deg 0% 100%;
+		/* Dark text color */
+		--theme-accent: 174deg 81% 46%;
+		/* Dark accent color */
+		--theme-accent-2: 0deg 0% 100%;
+		/* Dark secondary color */
+		--theme-quote: 174deg 81% 46%;
+		/* Dark quote color */
+
+		/* Penrose triangle and ball colors */
+		--triangle-color: 174deg 81% 46%;
+		--ball-color: 0deg 0% 100%;
 	}
+
+	.text-link {
+		color: var(--theme-link);
+	}
+
 }
