--- a/src/pages/home.astro
+++ b/src/pages/home.astro
@@ -1,12 +1,12 @@
 ---
 import SocialList from "@/components/SocialList.astro";
-// import PostPreview from "@/components/blog/PostPreview.astro";
-// import { getAllPosts, sortMDByDate } from "@/data/post";
+import PostPreview from "@/components/blog/PostPreview.astro";
+import { getAllPosts, sortMDByDate } from "@/data/post";
 import PageLayout from "@/layouts/Base.astro";
 import Tech from "@/components/Tech";
-// const MAX_POSTS = 10;
-// const allPosts = await getAllPosts();
-// const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
+const MAX_POSTS = 10;
+const allPosts = await getAllPosts();
+const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
 
 // const cactusProjects: {
 // 	description: string;
@@ -36,7 +36,12 @@ import Tech from "@/components/Tech";
 		<SocialList />
 	</section>
 
-	<!-- <section aria-label="Blog post list" class="mt-16">
+	<section class="mb-8 mt-16">
+		<h2 class="title mb-12 text-xl">Technologies</h2>
+		<Tech client:visible />
+	</section>
+
+	<section aria-label="Blog post list" class="mt-16">
 		<h2 class="title mb-4 text-xl">Posts</h2>
 		<ul class="space-y-4">
 			{
@@ -48,10 +53,5 @@ import Tech from "@/components/Tech";
 				))
 			}
 		</ul>
-	</section> -->
-
-	<section class="mb-8 mt-16">
-		<h2 class="title mb-12 text-xl">Technologies</h2>
-		<Tech client:visible />
 	</section>
 </PageLayout>
