--- a/src/pages/home.astro
+++ b/src/pages/home.astro
@@ -4,6 +4,7 @@ import PostPreview from "@/components/blog/PostPreview.astro";
 import { getAllPosts, sortMDByDate } from "@/data/post";
 import PageLayout from "@/layouts/Base.astro";
 import Tech from "@/components/Tech";
+import Experience from "@/components/Experience";
 const MAX_POSTS = 10;
 const allPosts = await getAllPosts();
 const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
@@ -29,11 +30,16 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
 <PageLayout meta={{ title: "Home" }}>
 	<section>
 		<h1 class="title mb-6">Hey, I'm Ayesha!</h1>
-		<p class="mb-4 text-base">
+		<p class="mb-4 text-sm">
 			I'm Ayesha Gull, a computer science student and researcher at Namal University, passionate
 			about building intelligent systems, and driving impact one line of code at a time.
 		</p>
 		<SocialList />
+	</section>
+
+	<section class="mb-8 mt-16">
+		<h2 class="title mb-12 text-xl">Experience</h2>
+		<Experience client:visible />
 	</section>
 
 	<section class="mb-8 mt-16">
