Added a blog post and hashnode's link

--- a/src/components/SocialList.astro
+++ b/src/components/SocialList.astro
@@ -28,9 +28,9 @@ const socialLinks: {
 		name: "mdi:twitter",
 	},
 	{
-		friendlyName: "Resume",
-		link: "https://www.scribd.com/",
-		name: "mdi:file-document",
+		friendlyName: "Blog",
+		link: "https://ayeshaiq.hashnode.dev/",
+		name: "mdi:web",
 	},
 ];
 ---
