Added resume file

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -80,5 +80,16 @@ const meta = {
 				><a href="mailto:ayeshaiqbal2592@gmail.com" rel="noreferrer" target="_blank">email</a></span
 			>!
 		</p>
+
+		<h1 class="title">Resume</h1>
+		<p>
+			You can view or download my resume <a
+				href="/portfolio/resume.pdf"
+				download="resume.pdf"
+				target="_blank"
+				rel="noopener"
+				class="text-base underline">here</a
+			>.
+		</p>
 	</div>
 </PageLayout>
