--- a/src/pages/home.astro
+++ b/src/pages/home.astro
@@ -15,8 +15,8 @@ const allPostsByDate = sortMDByDate(allPosts).slice(0, MAX_POSTS);
 	<section>
 		<h1 class="title mb-6">Hey, I'm Ayesha!</h1>
 		<p class="mb-4 text-sm">
-			I'm Ayesha Gull, a computer science student and researcher at Namal University, passionate
-			about building intelligent systems, and driving impact one line of code at a time.
+			I'm Ayesha Gull, a computer science graduate and a researcher, passionate about building
+			intelligent systems and driving impact one line of code at a time.
 		</p>
 		<SocialList />
 	</section>
